exp.java
/* Generated By:JavaCC: Do not edit this line. exp.java */
class exp implements expConstants {
    public static void main(String args[]) throws ParseException{
        try {
            exp analizador = new exp(System.in);
            System.out.println("ocean,numCycl,year,name,numTrcks,yearTrck,monthTrck,dayTrck,hourTrck,minutsTrck,recordId,statusSys,latitude,longitude,maxSustWin,minPress,34ktNE,34ktSE,34ktSW,34ktNW,50ktNE,50ktSE,50ktSW,50ktNW,64ktNE,64ktSE,64ktSW,64ktNW,radMaxWind");
            analizador.Start();
            System.out.println("Fin del doc");
        } catch(ParseException e){
            System.out.println("Error kk");
            System.out.println (e.getMessage());
        }
    }

//Reglas
  static final public String Fecha() throws ParseException {
    Token temporal;
    String cadena = "";
    // Generar cadena de retorno
        temporal = jj_consume_token(Anio_reg);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Mes_reg);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Dia_reg);
        cadena += temporal.image + ", ";
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public String Tiempo() throws ParseException {
    Token temporal;
    String cadena = "";
    // Generar cadena de retorno
        temporal = jj_consume_token(Hora_reg);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Minutos_reg);
        cadena += temporal.image + ", ";
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public String Informacion_ciclon() throws ParseException {
    Token temporal;
    String cadena = "";
    //Generar cadena de retorno
        temporal = jj_consume_token(Oceano);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Numero_ciclon);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Anio);
        cadena += temporal.image + ", ";
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public String Identificador() throws ParseException {
    String cadena;
    Token temporal;
    // Generar cadena de retorno
        cadena = Informacion_ciclon();
    temporal = jj_consume_token(Nombre);
        cadena += temporal + ", ";
    temporal = jj_consume_token(Numero_registros);
        cadena += temporal + ", ";
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public String Metadatos() throws ParseException {
    Token temporal;
    String cadena = "";
    // Generar cadena de retorno
        temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image + ", ";
    temporal = jj_consume_token(Meta);
        cadena += temporal.image;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Retornar:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(Retornar);
    }
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public String Registro() throws ParseException {
    Token temporal;
    String cadena, cadena_temporal;
    // Generar cadena de retorno
        cadena = Fecha();
    cadena_temporal = Tiempo();
        cadena += cadena_temporal;
    try {
      temporal = jj_consume_token(Identificador_registro);
            cadena += temporal.image + ", ";
    } catch (ParseException e) {
            cadena += "NULL, ";
    }
    temporal = jj_consume_token(Estado);
        cadena += temporal + ", ";
    temporal = jj_consume_token(Latitud);
        cadena += temporal + ", ";
    temporal = jj_consume_token(Longitud);
        cadena += temporal + ", ";
    temporal = jj_consume_token(Vientos_max);
        cadena += temporal + ", ";
    temporal = jj_consume_token(Pres_min);
        cadena += temporal + ", ";
    cadena_temporal = Metadatos();
        cadena += cadena_temporal;
        {if (true) return cadena;}
    throw new Error("Missing return statement in function");
  }

  static final public void Start() throws ParseException {
    String cabecera, registro;
    label_2:
    while (true) {
      cabecera = Identificador();
      label_3:
      while (true) {
        registro = Registro();
             System.out.println(cabecera + registro);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Anio_reg:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_3;
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Oceano:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(0);
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public expTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x20,0x10,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x2,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public exp(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public exp(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new expTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public exp(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new expTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public exp(expTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(expTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
